
_____________________________________________________________________________________________________


                                       CFDWARP CHANGELOG

_____________________________________________________________________________________________________


2022 JUN 24a
  * in model/transport/doc/report.tex
    - improved the binary diffusion coefficient text within the Gupta-Yos section
  * in model/transport/_Gupta-Yos/transport.c
    - renamed EPC_* to LNLAMBDA_*
    - renamed collision_integral_curvefit11() to _piOmega11()
    - renamed collision_integral_curvefit22() to _piOmega22()
    - renamed _epc() to _lnLambda()
    - renamed epc to lnLambda

2022 JUN 23c
  * in model/transport/_Gupta-Yos/transport.c
    - in find_muk_from_chik_N_T_Te_Delta1(), added  Delta1_e as a parameter
    - in find_muk_from_chik_N_T_Te_Delta1(), made the electron mobility function of Delta1_e instead
      of Delta1 (makes a difference when Te is different from T)
      

2022 JUN 23b
  * in model/transport/_Gupta-Yos/transport.c
    - in collision_integral_curvefit22() and collision_integral_curvefit11(), removed the clipping
      of the temperature that prevented it to fall below 1000K. Now, the polynomials are used
      for temperatures as low as OMEGATMINCLIP (which is set to 10K).
      

2022 JUN 23a
  * in model/share/transport_share.c
    - in find_nuk_from_Dij(), got rid of code that is not used (only kept the first Oran-Boris method)
  * in model/transport/doc/report.tex
    - made various changes to reflect latest changes to transport modules
    

2022 JUN 22a
  * in model/chem/_C2H4_Air_Plasma_30s/chem.c
    - added some reactions
  * in model/share/transport_share.c
    - added adjust_nue_given_nui()
    - added find_nuk_from_Dij()
  * in model/transport/_Gupta-Yos/transport.c
    - in _epc(), made sure electron pressure is at least 1e-10 atm (or some NAN would occur)
    - in _epc(), made sure epc does not exceed 100